syntax = "proto3";

package compose;

service ComposeService {
  rpc ComposeImage (ComposeRequest) returns (ComposeResponse);
}

message ComposeRequest {
  string image_base64 = 1;
  string text = 2;
  repeated string sentences = 3;
}

message ComposeResponse {
  bytes composed_image = 1;
}
